; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/atheros/alx/extr_main.c_alx_reinit_rings.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/atheros/alx/extr_main.c_alx_reinit_rings.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.alx_priv = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.alx_priv*)* @alx_reinit_rings to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @alx_reinit_rings(%struct.alx_priv* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.alx_priv*, align 8
  store %struct.alx_priv* %0, %struct.alx_priv** %3, align 8
  %4 = load %struct.alx_priv*, %struct.alx_priv** %3, align 8
  %5 = call i32 @alx_free_buffers(%struct.alx_priv* %4)
  %6 = load %struct.alx_priv*, %struct.alx_priv** %3, align 8
  %7 = call i32 @alx_init_ring_ptrs(%struct.alx_priv* %6)
  %8 = load %struct.alx_priv*, %struct.alx_priv** %3, align 8
  %9 = load i32, i32* @GFP_KERNEL, align 4
  %10 = call i32 @alx_refill_rx_ring(%struct.alx_priv* %8, i32 %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %15, label %12

12:                                               ; preds = %1
  %13 = load i32, i32* @ENOMEM, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %2, align 4
  br label %16

15:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %16

16:                                               ; preds = %15, %12
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @alx_free_buffers(%struct.alx_priv*) #1

declare dso_local i32 @alx_init_ring_ptrs(%struct.alx_priv*) #1

declare dso_local i32 @alx_refill_rx_ring(%struct.alx_priv*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
